--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,56 @@
-setuptools==39.0.1
-pywin32==220
-pyOpenSSL==17.6.0dev0
-lxml==4.2.4
-Scrapy==1.5.1
+asn1crypto==0.24.0
+attrs==18.1.0
+Automat==0.7.0
+beautifulsoup4==4.6.3
 bs4==0.0.1
+certifi==2018.8.24
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+constantly==15.1.0
+cryptography==2.3.1
+cssselect==1.0.3
+cx-Oracle==7.0.0
+enum34==1.1.6
 Flask==1.0.2
+functools32==3.2.3.post2
+get==1.0.3
+hyperlink==18.0.0
+idna==2.7
+incremental==17.5.0
+ipaddress==1.0.22
+itsdangerous==0.24
+Jinja2==2.10
+lxml==4.2.4
+MarkupSafe==1.0
+numpy==1.14.5+mkl
+pandas==0.23.4
+parsel==1.5.0
+post==1.0.2
+public==1.0.3
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
+pycparser==2.18
+PyDispatcher==2.0.5
+PyHamcrest==1.9.0
 pymongo==3.7.1
-Twisted==18.7.0
+pyopenssl==17.6.0.dev0
+python-dateutil==2.7.3
+pytz==2018.5
+pywin32==220
+query-string==1.0.2
+queuelib==1.5.0
+request==1.0.2
 requests==2.19.1
+scipy==1.1.0
+Scrapy==1.5.1
+service-identity==17.0.0
+six==1.11.0
+Twisted==18.7.0
+urllib3==1.23
+w3lib==1.19.0
+Werkzeug==0.14.1
+xlrd==1.1.0
+XlsxWriter==1.1.0
+xlwt==1.3.0
+zope.interface==4.5.0
